# MiniOAuth2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/google_auth/: CMakeLists.txt  README.md  main.cpp
include/: minioauth2.hpp
test/: CMakeLists.txt  minioauth2_test.cpp  test_utils.cpp
